[metadata]
# replace with your username:
name = capability
version = 0.0.1rc5
author = Alexandre Baharov
author_email = alex.baharov @ gmail.com
description = A collecton of tools for capability analysis for Python.
long_description = file: README.md
long_description_content_type = text / markdown
url = https: // github.com / alebaho / quality - control
classifiers =
	Intended Audience: : Science/Research
    Topic :: Scientific/Engineering
    Programming Language:: Python : : 3
    License:: OSI Approved : : MIT License
    Operating System: : OS Independent

[options]
packages = find:
python_requires = >=3.6
